--- a/wp-content/themes/inclusiva/assets/manifest.json
+++ b/wp-content/themes/inclusiva/assets/manifest.json
@@ -10,6 +10,9 @@
       "files": [
         "styles/main.scss"
       ],
+      "vendor": [
+        "../../plugins/contact-form-7/includes/css/styles.css"
+      ],
       "main": true
     },
     "editor-style.css": {
