--- a/wp-content/themes/inclusiva/bower.json
+++ b/wp-content/themes/inclusiva/bower.json
@@ -7,11 +7,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "modernizr": "2.8.2",
     "bootstrap-sass-official": "3.3.5",
     "font-awesome": "~4.4.0",
     "owl-carousel2": "~2.0.0-beta.3",
-    "animate-css": "~3.4.0"
+    "geoffgraham.animate.scss": "~3.2.2",
+    "modernizr": "~3.2.0"
   },
   "overrides": {
     "modernizr": {
