--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,13 @@ node_modules
 # WordPress One!
 .htaccess
 wp-config.php
+wp-content/plugins/debug-bar
+wp-content/plugins/debug-bar-console
+wp-content/plugins/debug-bar-cron
+wp-content/plugins/debug-bar-extender
+wp-content/plugins/developer
+wp-content/plugins/log-viewer
+wp-content/plugins/theme-check
 wp-content/themes/inclusiva/bower_components
 wp-content/themes/inclusiva/node_modules
 wp-content/themes/inclusiva/bower_components
