--- a/wp-content/themes/inclusiva/bower.json
+++ b/wp-content/themes/inclusiva/bower.json
@@ -10,9 +10,17 @@
     "bootstrap-sass-official": "3.3.5",
     "font-awesome": "~4.4.0",
     "owl-carousel2": "~2.0.0-beta.3",
-    "geoffgraham.animate.scss": "~3.2.2"
+    "geoffgraham.animate.scss": "~3.2.2", 
+    "jquery-colorbox": "~1.6.3"
   },
   "overrides": {
+    "jquery-colorbox": {
+      "main": [
+        "./example3/colorbox.css",
+        "jquery.colorbox.js",
+        "./i18n/jquery.colorbox-es.js"
+      ]
+    },
     "bootstrap-sass-official": {
       "main": [
         "./assets/stylesheets/_bootstrap.scss",
