Maintenance mode ignnored

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ node_modules
 
 # WordPress One!
 .htaccess
+.maintenance*
 wp-config.php
 wp-content/plugins/debug-bar
 wp-content/plugins/debug-bar-console
