--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
+#macOS Files
+.DS_Store
+.Trashes
+Thumbs.db
+
 # WordPress One!
 .htaccess
 .maintenance
