--- a/wp-content/themes/inclusiva/bower.json
+++ b/wp-content/themes/inclusiva/bower.json
@@ -10,8 +10,8 @@
     "bootstrap-sass-official": "3.3.5",
     "font-awesome": "~4.4.0",
     "owl-carousel2": "~2.0.0-beta.3",
-    "geoffgraham.animate.scss": "~3.2.2", 
-    "jquery-colorbox": "~1.6.3"
+    "geoffgraham.animate.scss": "~3.2.2",
+    "lightbox2": "^2.9.0"
   },
   "overrides": {
     "jquery-colorbox": {
