--- a/wp-content/themes/inclusiva/assets/manifest.json
+++ b/wp-content/themes/inclusiva/assets/manifest.json
@@ -28,6 +28,11 @@
         "scripts/directory-map.js"
       ]
     },
+    "is.js": {
+      "files": [
+        "scripts/is.js"
+      ]
+    },
     "jquery.js": {
       "bower": ["jquery"]
     }
