--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ wp-content/themes/inclusiva/bower_components
 wp-content/themes/inclusiva/node_modules
 wp-content/themes/inclusiva/bower_components
 wp-content/uploads
+
+*.sql
