Soluciona problema de escript en el admin

--- a/wp-content/themes/inclusiva/assets/manifest.json
+++ b/wp-content/themes/inclusiva/assets/manifest.json
@@ -23,6 +23,11 @@
                 "styles/editor-style.scss"
             ]
         },
+        "admin-script.js": {
+          "files": [
+              "scripts/admin-script.js"
+          ]
+        },
         "directory-map.js": {
             "files": [
                 "scripts/directory-map.js"
